[package]
name = "ckb-bf-zkvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2 = { git = "https://github.com/scroll-tech/halo2", branch = "scroll-dev-1220" }
halo2_gadgets = { git = "https://github.com/scroll-tech/halo2", branch = "scroll-dev-1220" }
halo2_proofs = { git = "https://github.com/scroll-tech/halo2", branch = "scroll-dev-1220" }
