[workspace]
members = [
    "ckb_bf_vm",
    "ckb_bf_prover",
    "ckb_bf_verifier",
    "ckb_bf_base",
    "halo2",
    "halo2_gadgets",
    "halo2_proofs",
    "halo2curves",
    "poseidon",
    "bn254_benchmark"
]

[profile.release.package.ckb_bf_verifier]
debug = false
strip = true

[profile.release.package.bn254_benchmark]
debug = false
strip = true

