[package]
name = "bn254_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std.git", rev = "60a7007" }
halo2curves = { path = "../halo2curves" }
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_xorshift = "0.3"
