[package]
name = "ckb_bf_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2 = { path = "../halo2" }
halo2_gadgets = { path = "../halo2_gadgets" }
halo2_proofs = { path = "../halo2_proofs" }
ckb_bf_vm = {path = "../ckb_bf_vm"}
halo2curves = {path = "../halo2curves" }
lz4_flex = { version = "0.10", default-features = false }
