[package]
name = "ckb_bf_prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb_bf_vm = {path = "../ckb_bf_vm"}
halo2 = { git = "https://github.com/scroll-tech/halo2", branch = "scroll-dev-1220" }
halo2_gadgets = { git = "https://github.com/scroll-tech/halo2", branch = "scroll-dev-1220" }
halo2_proofs = { git = "https://github.com/scroll-tech/halo2", branch = "scroll-dev-1220" }
rand = { version = "0.8.0", features = ["std"]}
rand_xorshift = "0.3"
log = "0.4.17"
env_logger = "0.10.0"
