[package]
name = "ckb_bf_prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb_bf_vm = {path = "../ckb_bf_vm"}
halo2 = { path = "../halo2" }
halo2_gadgets = { path = "../halo2_gadgets" }
halo2_proofs = { path = "../halo2_proofs" }
ckb_bf_base = {path = "../ckb_bf_base" }

rand = { version = "0.8.0", features = ["std"]}
rand_xorshift = "0.3"
log = "0.4.17"
env_logger = "0.10.0"

ckb-hash = "0.106.0"
ckb-mock-tx-types = "0.106.0"
ckb-jsonrpc-types = "0.106.0"
ckb-types = "0.106.0"
serde_json = "1.0"
