[package]
name = "ckb_bf_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.10.0"
halo2 = { path = "../halo2" }
halo2_gadgets = { path = "../halo2_gadgets" }
halo2_proofs = { path = "../halo2_proofs" }
ckb_bf_base = { path = "../ckb_bf_base" }
halo2curves = { path = "../halo2curves" }

[profile.release]
debug = false
strip = true
