[package]
name = "ckb_bf_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std.git", rev = "1b3fc3f", default-features = false, features = ["allocator", "ckb-types"] }
halo2 = { path = "../halo2" }
halo2_gadgets = { path = "../halo2_gadgets" }
halo2_proofs = { path = "../halo2_proofs" }
ckb_bf_base = { path = "../ckb_bf_base" }
halo2curves = { path = "../halo2curves" }
