[package]
name = "halo2_proofs"
version = "0.2.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Ying Tong Lai <yingtong@electriccoin.co>",
    "Daira Hopwood <daira@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2021"
rust-version = "1.56.1"
description = """
Fast PLONK-based zero-knowledge proving system with no trusted setup
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/halo2"
documentation = "https://docs.rs/halo2_proofs"
readme = "README.md"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zkp", "zkSNARKs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "hashtocurve"
harness = false

[[bench]]
name = "plonk"
harness = false

[[bench]]
name = "dev_lookup"
harness = false

[[bench]]
name = "fft"
harness = false

[dependencies]
backtrace = { version = "0.3", optional = true }
ff = "0.12"
# ff = { path = "../../ff", default-features = false }
group = "0.12" 
# group = { path = "../../group", default-features = false }
halo2curves = { git = 'https://github.com/contrun/halo2curves.git', branch = "v0.3.1-no-std", default-features = false }
# halo2curves = { path = "../../halo2curves" }
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
blake2b_simd = { version = "1", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
subtle = { version = "2.3", default-features = false, features = ["i128"] }
cfg-if = "0.1"
poseidon = { git = 'https://github.com/contrun/poseidon.git', branch = "no-std" }
# poseidon = { path = "../../poseidon", default-features = false } 
num-integer = { version = "0.1", default-features = false }
num-bigint = { version = "0.4", default-features = false }
hashbrown = { version = "0.9" }
scapegoat = "2.3.0"

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.3"
gumdrop = "0.8"
proptest = "1"
rand_core = { version = "0.6", default-features = false }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
gadget-traces = ["backtrace"]
sanity-checks = []
batch = ["rand_core/getrandom"]
shplonk = []
gwc = []
phase-check = []

[lib]
bench = false

[[example]]
name = "circuit-layout"
required-features = ["dev-graph"]
