[package]
name = "halo2curves"
version = "0.3.1"
authors = [
  "Sean Bowe <ewillbefull@gmail.com>",
  "Jack Grigg <jack@z.cash>",
  "Alex Vlasov <alex.m.vlasov@gmail.com>",
  "Alex Gluchowski <alex@gluchowski.net>"
]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/kilic/pairing"
readme = "README.md"
description = "Elliptic curve implementations and wrappers for halo2 library"

[[bench]]
name = "less_than"
harness = false

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand_xorshift = "0.3"
ark-std = { version = "0.3" }

[dependencies]
subtle = { version = "2.4", default-features = false, features = ["i128"] }
ff = { version = "0.12.0", default-features = false }
group = "0.12.0"
pasta_curves = { version = "0.4.0", default-features = false, features = ["bits", "alloc"] }
# TODO: pull a dependency with different features under Cargo.toml "dependencies" and "dev-dependencies"
# https://stackoverflow.com/questions/64438139/how-to-pull-a-dependency-with-different-features-under-cargo-toml-dependencies
# dev needs default features.
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }

[features]
default = []
asm = []
prefetch = []
print-trace = [ "ark-std/print-trace" ]
