[package]
name = "poseidon"
version = "0.2.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
halo2curves = { path = "../halo2curves", default-features = false }
group = { version = "0.12.0", default-features = false }
subtle = { version = "2.3", default-features = false }

[dev-dependencies]
rand_core = { version = "0.6" }
paste = "1.0.7"
